unpackaged/main/default/objects/OpportunityLineItem/fields/AccountDrug__c.field-meta.xml
<CustomField>
    <fullName>AccountDrug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Custom field is created as part of SAL-1223.</description>
    <label>Account Drug</label>
    <referenceTo>AccountDrug__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>