unpackaged/main/default/objects/OpportunityLineItem/fields/DrugBlank__c.field-meta.xml
<CustomField>
    <fullName>DrugBlank__c</fullName>
    <description>This Custom Formula Field is created as part of SAL-1223 User story.</description>
    <formula>ISBLANK(AccountDrug__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug Blank</label>
    <type>Checkbox</type>
</CustomField>