unpackaged/main/default/objects/OpportunityLineItem/fields/MDMRecordType__c.field-meta.xml
<CustomField>
    <fullName>MDMRecordType__c</fullName>
    <description>This Custom Field is created as per of SAL-1223.</description>
    <label>MDM Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee</fullName>
                <default>true</default>
                <label>Fee</label>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>